[package]
name = "mapgen"
version = "0.1.0"
authors = ["Ian Sly <iansly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "*"
sha2 = "*"
rand = "*"
vecmap = { path = "https://github.com/uzkbwza/vecmap#master"}
tcod = "*"